# Daemonizer

./: .gitignore  Daemon.pro  README.md  daemon.cpp  daemon.h  main.cpp  myclass.cpp  myclass.h  program.cpp
.github/workflows/: main.yml
DynamicDaemonizer/: CMakeLists.txt  Daemonizer.pro  README.md
DynamicDaemonizer/Daemonizer/: daemonizer.cpp  daemonizer.h  daemonizer_global.h
DynamicDaemonizer/include/: daemonizer.h
DynamicDaemonizer/scripts/: build.sh  install.sh  uninstall.sh
DynamicDaemonizer/src/: daemonizer.cpp
StaticDaemonizer/: CMakeLists.txt  Daemon.pro  Daemonizer.pro  README.md  daemon.cpp  daemonizer.h  install.sh  main.cpp
StaticDaemonizer/scripts/: build.sh  install.sh  uninstall.sh
StaticDaemonizer/src/: daemonizer.cpp
